--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   "dependencies": {
     "expo": "^26.0.0",
     "firebase": "^4.12.1",
+    "lottie-react-native": "^2.3.2",
+    "native-base": "^2.4.4",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-remote-svg": "^1.2.0",
     "react-native-svg-icon": "^0.8.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11"
   }
 }
